--- a/salil-helm/salil-app/templates/deployments/redisDb.yaml
+++ b/salil-helm/salil-app/templates/deployments/redisDb.yaml
@@ -21,6 +21,13 @@ spec:
     spec:
       containers:
         - name: redis
+          resources:
+            requests:
+              memory: "16Mi"
+              cpu: "25m"
+            limits:
+              memory: "64Mi"
+              cpu: "350m"          
           image: redis
           ports:
             - containerPort: {{ .Values.service.dbPort }} #6379
